--- a/Доп.задание.css
+++ b/Доп.задание.css
@@ -22,7 +22,36 @@ button {
     right: 0;
     bottom: 500px;
 }
+
+/* задание 1 */
+
 .circle {
-    display: flex;
-    justify-content: center;
+    font-size: calc(3em + 10px);
+    padding: calc(1vmax + -1vmin);
+    width: calc(50vh - 25px);
+    margin: 1em auto;
+    background: silver;
+    border-radius: 50%;
+}
+.circle::before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    padding-top: 100%;
+}
+
+/* задание 2 с помощью css */
+ 
+body:hover {
+    background-color: black;
+}
+.block {
+    max-width: 300px;
+    height: 300px;
+    background: gray;
+    margin: 0 auto;
+}
+.block:hover {
+    background-color:black;
+    box-shadow:0 0 0 1000px gray;
 }
